complete signup, login with form,  handling user data to login from database done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,10 @@ spring.jpa.hibernate.ddl-auto=update
 #email configuration
 
 
-# security configuration 
+# security configuration (for development purpose)
+# spring.security.user.name=${SECURITY_USER}
+# spring.security.user.password=${SECURITY_PASSWORD}
+
 
 # oauth2 client configurations
 #google configure
