--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,9 +26,13 @@ spring.jpa.hibernate.ddl-auto=update
 
 # oauth2 client configurations
 #google configure
-
+spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=email,profile
 # github configure
-
+spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
+spring.security.oauth2.client.registration.github.scope=email,profile
 # cloudinary  configurations
 
 
