--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,15 @@ spring.security.oauth2.client.registration.google.scope=openid,email,profile
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
 spring.security.oauth2.client.registration.github.scope=email,profile
+
 # cloudinary  configurations
+cloudinary.cloud.name=${CLOUD_NAME}
+cloudinary.api.key=${API_KEY}
+cloudinary.api.secret=${API_SECRET}
+
+#MAX FILE SIZE
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 
 
