--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=scm
-server.port=8081
+server.port=${PORT:8081}
 spring.config.import=file:env.properties
 # mysql database configurations
 #data source url
-spring.datasource.url=jdbc:mysql://localhost:3306/${DB_DATABASE}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${DB_PORT:3306}/${DB_DATABASE}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #jpa configurations(will make it false in production)
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=${SHOW_SQL:true}
 #for creating schemas and tables
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
 
 # spring.jpa.properties.hibernate.format_sql=true
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -40,12 +40,13 @@ cloudinary.api.key=${API_KEY}
 cloudinary.api.secret=${API_SECRET}
 
 #MAX FILE SIZE
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:10MB}
+spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:10MB}
+# spring.profiles.active=${ACTIVE_PROFILE:dev}
 
 #mailing service using gmail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.host=${HOST}
+spring.mail.port=${MAIL_PORT}
 spring.mail.username=${GMAIL_USERNAME}
 spring.mail.password=${GMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
